--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -22,7 +22,7 @@ rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.js"></script>
 </head>
 <body>
-    <%- include("../includes/navbar.ejs") %> 
+    <%- include("../includes/navBar.ejs") %> 
     <div class="container">
         <%- include("../includes/flash.ejs") %>
         <%- body %> </div> 
