--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ body{
     font-size:2rem; 
 }
 footer{ display: flex;
-  
+  margin-top:auto;
   flex-direction: column;
   background-color: aliceblue; 
   /* width:100svh !important;   */
